tests/e2e/snapshots/e2e__e2e_semantic_blockquote__blockquote_codeblock_priority_binary.snap
---
source: tests/e2e/e2e_semantic_blockquote.rs
expression: data
---
[
  0,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  26,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0,
  0,
  3,
  7,
  17,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  31,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0
]
