tests/e2e/snapshots/e2e__e2e_semantic_blockquote__blockquote_heading_multiline_leak.snap
---
source: tests/e2e/e2e_semantic_blockquote.rs
expression: snapshot
---
[
  {
    "line": 0,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 0,
    "start": 2,
    "length": 5,
    "type": "class",
    "text": "# foo"
  },
  {
    "line": 1,
    "start": 0,
    "length": 5,
    "type": "keyword",
    "text": "> bar"
  }
]
