tests/e2e/snapshots/e2e__e2e_semantic_blockquote__blockquote_nested_markdown_python.snap
---
source: tests/e2e/e2e_semantic_blockquote.rs
expression: snapshot
---
[
  {
    "line": 0,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 0,
    "start": 2,
    "length": 6,
    "type": "string",
    "text": "``````"
  },
  {
    "line": 0,
    "start": 8,
    "length": 8,
    "type": "variable",
    "text": "markdown"
  },
  {
    "line": 1,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 1,
    "start": 2,
    "length": 3,
    "type": "string",
    "text": "```"
  },
  {
    "line": 1,
    "start": 5,
    "length": 6,
    "type": "variable",
    "text": "python"
  },
  {
    "line": 2,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 2,
    "start": 2,
    "length": 1,
    "type": "variable",
    "text": "y"
  },
  {
    "line": 2,
    "start": 3,
    "length": 1,
    "type": "string",
    "text": " "
  },
  {
    "line": 2,
    "start": 4,
    "length": 1,
    "type": "operator",
    "text": "="
  },
  {
    "line": 2,
    "start": 5,
    "length": 1,
    "type": "string",
    "text": " "
  },
  {
    "line": 2,
    "start": 6,
    "length": 1,
    "type": "number",
    "text": "1"
  },
  {
    "line": 2,
    "start": 7,
    "length": 1,
    "type": "string",
    "text": " "
  },
  {
    "line": 2,
    "start": 8,
    "length": 1,
    "type": "operator",
    "text": "+"
  },
  {
    "line": 2,
    "start": 9,
    "length": 1,
    "type": "string",
    "text": " "
  },
  {
    "line": 2,
    "start": 10,
    "length": 1,
    "type": "number",
    "text": "2"
  },
  {
    "line": 3,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 3,
    "start": 2,
    "length": 1,
    "type": "variable",
    "text": "x"
  },
  {
    "line": 3,
    "start": 3,
    "length": 1,
    "type": "string",
    "text": " "
  },
  {
    "line": 3,
    "start": 4,
    "length": 1,
    "type": "operator",
    "text": "="
  },
  {
    "line": 3,
    "start": 5,
    "length": 1,
    "type": "string",
    "text": " "
  },
  {
    "line": 3,
    "start": 6,
    "length": 4,
    "type": "string",
    "text": "f\"\"\""
  },
  {
    "line": 4,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 4,
    "start": 2,
    "length": 5,
    "type": "string",
    "text": "  foo"
  },
  {
    "line": 4,
    "start": 8,
    "length": 1,
    "type": "number",
    "text": "1"
  },
  {
    "line": 4,
    "start": 10,
    "length": 1,
    "type": "operator",
    "text": "+"
  },
  {
    "line": 4,
    "start": 12,
    "length": 1,
    "type": "number",
    "text": "2"
  },
  {
    "line": 5,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 5,
    "start": 2,
    "length": 3,
    "type": "string",
    "text": "\"\"\""
  },
  {
    "line": 6,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 6,
    "start": 2,
    "length": 3,
    "type": "string",
    "text": "```"
  },
  {
    "line": 7,
    "start": 0,
    "length": 2,
    "type": "keyword",
    "text": "> "
  },
  {
    "line": 7,
    "start": 2,
    "length": 6,
    "type": "string",
    "text": "``````"
  }
]
